--- a/public/clients/views/modal.view.html
+++ b/public/clients/views/modal.view.html
@@ -17,7 +17,7 @@
 
           <div class="form-group">
             <label>CI</label>
-            <input type="text" class="form-control" placeholder="CI"
+            <input type="number" class="form-control" placeholder="CI"
                 ng-model="clienteSel.ci" required>
           </div>
           
