--- a/public/main/views/menu.view.html
+++ b/public/main/views/menu.view.html
@@ -16,7 +16,7 @@
   </div>
 
   <!-- search form (Optional) -->
-  <form action="#" method="get" class="sidebar-form">
+  <!--<form action="#" method="get" class="sidebar-form">
     <div class="input-group">
       <input type="text" name="q" class="form-control" placeholder="Search...">
           <span class="input-group-btn">
@@ -24,7 +24,7 @@
             </button>
           </span>
     </div>
-  </form>
+  </form>-->
   <!-- /.search form -->
 
   <!-- Sidebar Menu -->
@@ -36,7 +36,7 @@
     <li ng-class="mClients"><a ng-href="clients/1"><i class="fa fa-user-plus"></i> <span>Clientes</span></a></li>
     <li ng-class="mGives"><a ng-href="gives"><i class="fa fa-money"></i> <span>Prestamos</span></a></li>
     <li ng-class="mReport"><a ng-href="reports"><i class="fa fa-file-text"></i> <span>Reportes</span></a></li>
-    <li ng-class="mGraphic"><a ng-href="graphic"><i class="fa fa-pie-chart"></i> <span>Graficos</span></a></li>
+    <li ng-hide="userTYPE == 'user'" ng-class="mGraphic"><a ng-href="graphic"><i class="fa fa-pie-chart"></i> <span>Graficos</span></a></li>
     <!--<li class="treeview">
       <a href="#"><i class="fa fa-link"></i> <span>Multilevel</span>
         <span class="pull-right-container">
