--- a/public/reports/views/report.view.html
+++ b/public/reports/views/report.view.html
@@ -2,4 +2,110 @@
     <li><a href="/prestamos"><i class="fa fa-dashboard"></i> Principal</a></li>
     <li class="active">Reportes</li>
 </ol>
-<h2>Estos son los reportes</h2>
+
+
+<div class="row">
+
+	<div class="col-md-12">
+	  <div class="box" ng-repeat="give in rgives.give">
+		<div class="box-header with-border">
+	      <h3 class="box-title">ID: #{{give.id}} - Capital: <strong>{{give.amount}}</strong> </h3>
+	      <h4>
+	      	Se prestó a: <strong><a class="mano">{{give.cli_name | palabra}} {{give.cli_last_name | palabra}}</a></strong> por {{give.month}} meses 
+	      	<div ng-show="give.visible == '2'" style="float:right;" class="mano" ng-click="hiddenGive(give.id);"><i class="fa fa-eye-slash fa-2x"></i> </div>
+	      </h4>
+	
+		   <div class="box-tools">
+	         <strong>Fecha: </strong>{{give.fec_pre | date:"longDate"}}
+	       </div>
+
+	    </div>
+	    <!-- /.box-header -->
+
+		<div class="box-body" ng-hide="load || !rgives.give.length">
+			      
+		  <table class="table table-bordered table-condensed responsive-table">
+			<thead>
+				<tr>
+					<th>FECHA</th>
+					<th>CAPITAL</th>
+					<th>INTERES</th>
+					<th>{{give.ac_name | palabra}} {{give.ac_last_name | palabra}}</th>
+					<th>{{give.us_name | palabra}} {{give.us_last_name | palabra}} </th>
+					<th>Observación</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr class="active" ng-repeat="pay in give.payment">
+					<td>{{pay.fec_pago}}</td>
+					<td>{{pay.capital_shares}} </td>
+					<td>{{pay.interests}} </td>
+					<td>{{pay.lender}} </td>
+					<td>{{pay.assistant}}</td>
+					<td>{{pay.observation}}</td>
+				</tr>
+				<tr class="danger" ng-repeat="npay in give.nopayment">
+					<td>{{npay.fec_pago}}</td>
+					<td>{{npay.capital_shares}} </td>
+					<td>{{npay.interests}} </td>
+					<td>{{npay.lender}} </td>
+					<td>{{npay.assistant}}</td>
+					<td>{{npay.observation}}</td>
+				</tr>
+				<tr>
+					<td><strong>Totales</strong></td>
+					<td>{{ give.total_capital }}</td>
+					<td>{{ give.total_interest }}</td>
+					<td>{{ give.total_lender }}</td>
+					<td>{{ give.total_assistant }}</td>
+					<td></td>
+				</tr>
+					<!-- 
+
+					date:"yyyy/MM/dd" = 2017/04/25
+					date:"medium" = 25/04/2017 14:30:10
+					date:"short" = 25/04/17 14:30
+					date:"fullDate" = martes, 25 de abril de 2017
+					date:"longDate" = 25 de abril de 2017
+					date:"mediumDate" = 25/04/2017
+					date:"shortDate" = 25/04/17
+					date:"mediumTime" = 14:30:10
+					date:"shortTime" = 14:30
+					date = 25/04/2017
+
+					-->
+			</tbody>
+
+		  </table>
+		</div>
+
+	  </div>
+	</div>
+	<div class="col-md-12">
+	  <div class="box">
+	  	<div class="box-body" ng-show="load">
+			<div class="cargando">
+				<i class="fa fa-spinner fa-pulse fa-2x fa-fw" aria-hidden="true"></i>
+				Cargando...
+			</div>
+		</div>
+		<div class="box-body" ng-show="!load && !rgives.give.length">
+			<div class="cargando">
+				Ingrese nuevos registros.
+			</div>
+		</div>
+
+		<div class="box-footer clearfix" ng-show="rgives.total_paginas > 1">
+		  <ul class="pagination pagination-sm no-margin pull-right">
+		    <li><a class="mano" ng-click="moverA(rgives.pag_anterior)">«</a></li>
+
+			<li class="active" ng-show="rgives.give.length">
+				<a class="mano" >{{ rgives.pag_actual }}</a>
+			</li>
+
+		    <li><a class="mano" ng-click="moverA( rgives.pag_siguiente )" >»</a></li>
+		  </ul>
+		</div>
+	  </div>
+	</div>
+</div>
