--- a/public/user/views/list.view.html
+++ b/public/user/views/list.view.html
@@ -35,6 +35,7 @@
 			<thead>
 				<tr>
 					<th><a class="mano" ng-click="columna='id'; reverse = !reverse;">#</a></th>
+					<th class="tamanioImg">Imagen </th>
 					<th><a class="mano" ng-click="columna='ci'; reverse = !reverse;">CI</a></th>
 					<th><a class="mano" ng-click="columna='name'; reverse = !reverse;">Nombre</a></th>
 					<th><a class="mano" ng-click="columna='last_name'; reverse = !reverse;">Apellido</a></th>
@@ -43,12 +44,15 @@
 					<th><a class="mano" ng-click="columna='civil_status'; reverse = !reverse;">Nivel </a></th>
 					<th><a class="mano" ng-click="columna='last_connection'; reverse = !reverse;">Ultima conexion</a></th>
 					<th><a class="mano" ng-click="columna='registered'; reverse = !reverse;">Registrado</a></th>
-					<th>Acción</th>
+					<th ng-show="userTYPE == 'supad'">Acción</th>
 				</tr>
 			</thead>
 			<tbody>
-				<tr ng-repeat="user in users.users | filter:busqueda | orderBy:columna:reverse" ng-hide=" user.type == 'supad' ">
+				<tr ng-repeat="user in users.users | filter:busqueda | orderBy:columna:reverse">
 					<td>{{ user.id }}</td>
+					<td class="tamanioImg">
+						<img ng-show=" user.src != '' " ng-src="app/photos/{{user.src}}" width="110px">
+					</td>
 					<td>{{ user.ci }} {{ user.ex }}</td>
 					<td>{{ user.name }}</td>
 					<td>{{ user.last_name }}</td>
@@ -58,9 +62,9 @@
 					<td>{{ user.last_connection | date:"short" }}</td>
 					<td>{{ user.registered | date:"fullDate" }}</td>
 
-					<td>
+					<td ng-show="userTYPE == 'supad'">
 						<a ng-click="mostrarModal( user )" class="btn btn-warning"><i class="fa fa-edit"></i></a>
-						<a ng-click="eliminar( user.id )" class="btn btn-danger"><i class="fa fa-trash"></i></a>
+						<a ng-hide=" user.type == 'supad' " ng-click="eliminar( user.id )" class="btn btn-danger"><i class="fa fa-trash"></i></a>
 					</td>
 				</tr>
 			</tbody>
