--- a/public/reports/views/report.view.html
+++ b/public/reports/views/report.view.html
@@ -16,7 +16,7 @@
 	      </h4>
 	
 		   <div class="box-tools">
-	         <strong>Fecha: </strong>{{give.fec_pre | date:"longDate"}}
+	         <strong>{{give.fec_pre | date:"longDate"}}</strong>
 	       </div>
 
 	    </div>
