--- a/public/clients/views/modal.view.html
+++ b/public/clients/views/modal.view.html
@@ -55,6 +55,7 @@
             <select type="text" class="form-control" placeholder="Estado civil"
                 ng-model="clienteSel.civil_status" required>
                 <option value="solter@">Soltero/a</option>
+                <option value="concubin@">Concubino/a</option>
                 <option value="casad@">Casado/a</option>
                 <option value="divorciad@">Divorciado/a</option>
                 <option value="viud@">Viudo/a</option>
