--- a/public/reports/views/modal.view.html
+++ b/public/reports/views/modal.view.html
@@ -11,7 +11,7 @@
 
       <div class="modal-body row">
 
-        <div class="col-xs-12" ng-repeat="r in rmes" style="background:#ecf0f5;margin: 5px 0px;">
+        <div class="col-xs-12 bg-aqua" ng-repeat="r in rmes" style="margin: 5px 0px;">
 
           <div class="row">
             <div class="col-xs-2" style="padding:0px;">
