--- a/public/reports/views/modal.view.html
+++ b/public/reports/views/modal.view.html
@@ -51,6 +51,8 @@
           </div>
         </div>
 
+
+      <p><strong>Total capital: </strong> {{tot_cap}} <strong>Total interes: </strong>{{tot_int}}</p>
       </div>
 
     </div><!-- /.modal-content -->
