--- a/public/reports/views/report.view.html
+++ b/public/reports/views/report.view.html
@@ -141,7 +141,7 @@
 	  </div>
 	</div>
 	<div class="col-md-12">
-	  <div class="box" ng-show="load">
+	  <div class="box" ng-show="!load">
 	  	<div class="box-body">
 			<div class="cargando">
 				<i class="fa fa-spinner fa-pulse fa-2x fa-fw" aria-hidden="true"></i>
