--- a/public/reports/views/report.view.html
+++ b/public/reports/views/report.view.html
@@ -142,7 +142,7 @@
 	</div>
 	<div class="col-md-12">
 	  <div class="box" ng-show="!load">
-	  	<div class="box-body">
+	  	<div class="box-body" ng-show="load">
 			<div class="cargando">
 				<i class="fa fa-spinner fa-pulse fa-2x fa-fw" aria-hidden="true"></i>
 				Cargando...
