--- a/public/reports/views/report.view.html
+++ b/public/reports/views/report.view.html
@@ -20,19 +20,6 @@
         </div>
         <!-- /.box-header -->
         <div class="box-body">
-          
-			
-
-		  <!-- /.filtros -->
-		  <div class="filtros">
-		  <div class="busqueda linea b-largo">
-		    <label for="busqueda"><i class="fa fa-search mano" aria-hidden="true"></i></label>
-		    <input id="busqueda" type="text" placeholder="Busque aqui..." ng-model="busqueda">
-		  </div>
-		  </div>
-		  <!-- /.Fin filtros -->
-
-
 
 		  <form name="frmReport"
             ng-submit="mostrarModal( month, frmReport )"
@@ -68,6 +55,15 @@
         <!-- /.box-body -->
       </div>
 	</div>
+
+	<!-- /.filtros -->
+	<div class="col-md-12 filtros">
+	<div class="busqueda linea b-largo">
+		<label for="busqueda"><i class="fa fa-search mano" aria-hidden="true"></i></label>
+		<input id="busqueda" type="text" placeholder="Busque aqui..." ng-model="busqueda">
+	</div>
+	</div>
+	<!-- /.Fin filtros -->
 
 	<div class="col-md-12">
 	  <div class="box box-warning" ng-repeat="give in rgives.give | filter:busqueda">
