--- a/public/reports/views/report.view.html
+++ b/public/reports/views/report.view.html
@@ -66,7 +66,7 @@
 	<!-- /.Fin filtros -->
 
 	<div class="col-md-12">
-	  <div class="box box-warning" ng-repeat="give in rgives.give | filter:busqueda">
+	  <div class="box box-warning collapsed-box" ng-repeat="give in rgives.give | filter:busqueda">
 		<div class="box-header with-border">
 	      <h3 class="box-title">ID: #{{give.id}} - Capital: <strong>{{give.amount}}</strong></h3>
 	      <h4>
