--- a/public/give/views/modal.view.html
+++ b/public/give/views/modal.view.html
@@ -111,7 +111,7 @@
           <div class="form-group">
             <label>Fecha del prestamo</label>
             <input type="date" class="form-control"
-                ng-model="giveSel.fec_pre" min="{{fechaMin}}" max="{{fechaMax}}" required>
+                ng-model="giveSel.fec_pre" required>
           </div>
 
           <div class="form-group">
